--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
+    "sass": "^1.69.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.10.1"
+    "@nuxtjs/tailwindcss": "^6.10.1",
+    "sass-loader": "^13.3.2"
   }
 }
